--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,12 @@
-<p>header works!</p>
+<header>
+    <h1>Brandon S. Lang</h1>
+    <nav>
+        <ul>
+            <li><a routerLink="/homepage">Home</a></li>
+            <li><a routerLink="/resume">Resume</a></li>
+            
+            <li><a routerLink="contact">Contact</a></li>
+        </ul>
+    </nav>
+</header>
+<router-outlet></router-outlet>
